--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --hover-background: rgba(179, 179, 179, 0.2);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +9,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  color: white;
+  overflow-y: auto;
+}
+
+.container {
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+.section {
+  height: 100vh;
+  scroll-snap-align: start;
+}
+
+.shop-page {
+  background-color: black;
+  display: grid;
+  place-items: center;
+  padding: 100px;
 }
 
 code {
